# open62541-buffer-history

./: README.md  client_history.cpp  format.sh  meson.build  server_history_custom.cpp
includes/: history_data_backend.h
